@@ -70,6 +70,7 @@ Enhancements:
 - #7424 Add Alma Linux and Rocky Linux runners
 - #7425 Refactored core process management and IPC client
 - #7426 Fixed warnings and enable errors as warnings
+- #7427 More reliable button click detection for add client dialog
 
 # 1.14.6
 
